// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Application loads asynchronously loads in the welcome screen asynchronously 1`] = `
<div>
  <title>
    AuthJazz
  </title>
  <div>
    <h1>
      Connection testing field
    </h1>
    <p>
      This will ping a random user thowards the server. However. it won't sign in the user since the user isn't verefied
    </p>
    <button
      alternative={true}
      onClick={[Function]}
      outlined={true}
    >
      Click to ping
    </button>
  </div>
  <div>
    <p>
      Have fun logging in as any Star Wars character in the database.
    </p>
    <p>
      HINT: the password is always password
    </p>
  </div>
  <div>
    <h1>
      Star Wars Characters login
    </h1>
    <p>
      Please log in
    </p>
    <form
      onSubmit={[Function]}
    >
      <div>
        <label
          htmlFor="StarWarsCharactersusername"
          required={false}
        >
          Username
        </label>
        <input
          id="StarWarsCharactersusername"
          name="username"
          onChange={[Function]}
          placeholder="Username"
          value=""
        />
      </div>
      <div>
        <label
          htmlFor="StarWarsCharacterspassword"
          required={false}
        >
          Password
        </label>
        <input
          id="StarWarsCharacterspassword"
          name="password"
          onChange={[Function]}
          placeholder="Password"
          type="password"
          value=""
        />
      </div>
      <button
        disabled={true}
      >
        Form fields not valid
      </button>
    </form>
  </div>
  <p>
    What follows is an iframe, the colors are different to illustrate that we're accessing a different website
  </p>
  <div
    src="http://localhost:4050"
    title="application_display"
  />
</div>
`;

exports[`Application loads asynchronously starts of empty 1`] = `
<div>
  <title>
    AuthJazz
  </title>
  <div>
    <p>
      Have fun logging in as any Star Wars character in the database.
    </p>
    <p>
      HINT: the password is always password
    </p>
  </div>
  <p>
    What follows is an iframe, the colors are different to illustrate that we're accessing a different website
  </p>
  <div
    src="http://localhost:4050"
    title="application_display"
  />
</div>
`;

exports[`Application start file Logs in users by token sent to method connectUser 1`] = `
<div>
  <title>
    AuthJazz
  </title>
  <div>
    <h1>
      Connection testing field
    </h1>
    <p>
      This will ping a random user thowards the server. However. it won't sign in the user since the user isn't verefied
    </p>
    <button
      alternative={true}
      onClick={[Function]}
      outlined={true}
    >
      Click to ping
    </button>
  </div>
  <div>
    <p>
      Have fun logging in as any Star Wars character in the database.
    </p>
    <p>
      HINT: the password is always password
    </p>
  </div>
  <div>
    <h1>
      Star Wars user logged in!
    </h1>
    <p>
      Here's some private information about you
    </p>
    <p>
      You can log out and try another user by clicking the log out button
    </p>
    <button
      alternative={true}
      onClick={[Function]}
    >
      Log out
    </button>
  </div>
  <div>
    <h1>
      Star Wars Characters user logged in!
    </h1>
    <p>
      Here's some private information about you
    </p>
    <p>
      You can log out and try another user by clicking the log out button
    </p>
    <button
      alternative={true}
      onClick={[Function]}
    >
      Log out
    </button>
  </div>
  <p>
    What follows is an iframe, the colors are different to illustrate that we're accessing a different website
  </p>
  <div
    src="http://localhost:4050"
    title="application_display"
  />
</div>
`;

exports[`Application start file Removes the welcome screen on logout 1`] = `
<div>
  <title>
    AuthJazz
  </title>
  <div>
    <h1>
      Connection testing field
    </h1>
    <p>
      This will ping a random user thowards the server. However. it won't sign in the user since the user isn't verefied
    </p>
    <button
      alternative={true}
      onClick={[Function]}
      outlined={true}
    >
      Click to ping
    </button>
  </div>
  <div>
    <p>
      Have fun logging in as any Star Wars character in the database.
    </p>
    <p>
      HINT: the password is always password
    </p>
  </div>
  <div>
    <h1>
      Star Wars login
    </h1>
    <p>
      Please log in
    </p>
    <form
      onSubmit={[Function]}
    >
      <div>
        <label
          htmlFor="StarWarsusername"
          required={false}
        >
          Username
        </label>
        <input
          id="StarWarsusername"
          name="username"
          onChange={[Function]}
          placeholder="Username"
          value=""
        />
      </div>
      <div>
        <label
          htmlFor="StarWarspassword"
          required={false}
        >
          Password
        </label>
        <input
          id="StarWarspassword"
          name="password"
          onChange={[Function]}
          placeholder="Password"
          type="password"
          value=""
        />
      </div>
      <button
        disabled={true}
      >
        Form fields not valid
      </button>
    </form>
  </div>
  <div>
    <h1>
      Star Wars Characters login
    </h1>
    <p>
      Please log in
    </p>
    <form
      onSubmit={[Function]}
    >
      <div>
        <label
          htmlFor="StarWarsCharactersusername"
          required={false}
        >
          Username
        </label>
        <input
          id="StarWarsCharactersusername"
          name="username"
          onChange={[Function]}
          placeholder="Username"
          value=""
        />
      </div>
      <div>
        <label
          htmlFor="StarWarsCharacterspassword"
          required={false}
        >
          Password
        </label>
        <input
          id="StarWarsCharacterspassword"
          name="password"
          onChange={[Function]}
          placeholder="Password"
          type="password"
          value=""
        />
      </div>
      <button
        disabled={true}
      >
        Form fields not valid
      </button>
    </form>
  </div>
  <p>
    What follows is an iframe, the colors are different to illustrate that we're accessing a different website
  </p>
  <div
    src="http://localhost:4050"
    title="application_display"
  />
</div>
`;

exports[`Application start file Renders the welcome screen on login 1`] = `
<div>
  <title>
    AuthJazz
  </title>
  <div>
    <h1>
      Connection testing field
    </h1>
    <p>
      This will ping a random user thowards the server. However. it won't sign in the user since the user isn't verefied
    </p>
    <button
      alternative={true}
      onClick={[Function]}
      outlined={true}
    >
      Click to ping
    </button>
  </div>
  <div>
    <p>
      Have fun logging in as any Star Wars character in the database.
    </p>
    <p>
      HINT: the password is always password
    </p>
  </div>
  <div>
    <h1>
      Star Wars user logged in!
    </h1>
    <p>
      Here's some private information about you
    </p>
    <div>
      <h2>
        Yoda
      </h2>
      <p>
        Born: 
        896BBY
      </p>
      <p>
        Your hair is 
        white
      </p>
      <p>
        Your eyes are 
        brown
      </p>
      <p>
        Your gender is 
        male
      </p>
      <h3>
        Your homeworld
      </h3>
      <div>
        <p>
          We don't know where you're from, just like some of the other characters. Maybe you know them?
        </p>
        <p>
          IG-88
        </p>
      </div>
    </div>
    <p>
      You can log out and try another user by clicking the log out button
    </p>
    <button
      alternative={true}
      onClick={[Function]}
    >
      Log out
    </button>
  </div>
  <div>
    <h1>
      Star Wars Characters login
    </h1>
    <p>
      Please log in
    </p>
    <form
      onSubmit={[Function]}
    >
      <div>
        <label
          htmlFor="StarWarsCharactersusername"
          required={false}
        >
          Username
        </label>
        <input
          id="StarWarsCharactersusername"
          name="username"
          onChange={[Function]}
          placeholder="Username"
          value=""
        />
      </div>
      <div>
        <label
          htmlFor="StarWarsCharacterspassword"
          required={false}
        >
          Password
        </label>
        <input
          id="StarWarsCharacterspassword"
          name="password"
          onChange={[Function]}
          placeholder="Password"
          type="password"
          value=""
        />
      </div>
      <button
        disabled={true}
      >
        Form fields not valid
      </button>
    </form>
  </div>
  <p>
    What follows is an iframe, the colors are different to illustrate that we're accessing a different website
  </p>
  <div
    src="http://localhost:4050"
    title="application_display"
  />
</div>
`;

exports[`Application start file renders without crashing 1`] = `
<div>
  <title>
    AuthJazz
  </title>
  <div>
    <h1>
      Connection testing field
    </h1>
    <p>
      This will ping a random user thowards the server. However. it won't sign in the user since the user isn't verefied
    </p>
    <button
      alternative={true}
      onClick={[Function]}
      outlined={true}
    >
      Click to ping
    </button>
  </div>
  <div>
    <p>
      Have fun logging in as any Star Wars character in the database.
    </p>
    <p>
      HINT: the password is always password
    </p>
  </div>
  <div>
    <h1>
      Star Wars login
    </h1>
    <p>
      Please log in
    </p>
    <form
      onSubmit={[Function]}
    >
      <div>
        <label
          htmlFor="StarWarsusername"
          required={false}
        >
          Username
        </label>
        <input
          id="StarWarsusername"
          name="username"
          onChange={[Function]}
          placeholder="Username"
          value=""
        />
      </div>
      <div>
        <label
          htmlFor="StarWarspassword"
          required={false}
        >
          Password
        </label>
        <input
          id="StarWarspassword"
          name="password"
          onChange={[Function]}
          placeholder="Password"
          type="password"
          value=""
        />
      </div>
      <button
        disabled={true}
      >
        Form fields not valid
      </button>
    </form>
  </div>
  <div>
    <h1>
      Star Wars Characters login
    </h1>
    <p>
      Please log in
    </p>
    <form
      onSubmit={[Function]}
    >
      <div>
        <label
          htmlFor="StarWarsCharactersusername"
          required={false}
        >
          Username
        </label>
        <input
          id="StarWarsCharactersusername"
          name="username"
          onChange={[Function]}
          placeholder="Username"
          value=""
        />
      </div>
      <div>
        <label
          htmlFor="StarWarsCharacterspassword"
          required={false}
        >
          Password
        </label>
        <input
          id="StarWarsCharacterspassword"
          name="password"
          onChange={[Function]}
          placeholder="Password"
          type="password"
          value=""
        />
      </div>
      <button
        disabled={true}
      >
        Form fields not valid
      </button>
    </form>
  </div>
  <p>
    What follows is an iframe, the colors are different to illustrate that we're accessing a different website
  </p>
  <div
    src="http://localhost:4050"
    title="application_display"
  />
</div>
`;
